script to generate pdf

--- a/notebooks/实验一.ipynb
+++ b/notebooks/实验一.ipynb
@@ -34,7 +34,7 @@
     "P_n(x) = \\displaystyle\\Sigma^n_{k=0}f(x_k)l_k(x)\n",
     "$$\n",
     "\n",
-    "是存在唯一的。若$x_k\\in[a, b], k = 0, 1, \\cdots, n$且函数$f(x)$充分光滑，则当$x\\in[a,b]$时，有误差估计式\n",
+    "是存在唯一的。若$x_k\\in[a, b], k = 0, 1, \\cdots, n$，且函数$f(x)$充分光滑，则当$x\\in[a,b]$时，有误差估计式\n",
     "\n",
     "$$\n",
     "f(x) - P_n(x) = \\frac{f^{n+1}(\\xi)}{(n+1)!}(x-x_0)(x-x_1)\\cdots(x-x_n), \\xi \\in[a,b]\n",
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "由多项式基本定理，$\\because P_n(x)$ 次数 $ \\leq n, \\therefore P_n(x)$ 是唯一存在的。"
+    "由多项式基本定理，$\\because P_n(x) \\text{的次数} \\leq n, \\therefore P_n(x)$ 是唯一存在的。"
    ]
   },
   {
@@ -133,13 +133,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 问题一"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -157,6 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# L_k(x)\n",
     "def L(k, x_list: np.ndarray):\n",
     "    def l(x: float):\n",
     "        x_k = x_list[k]\n",
@@ -166,13 +160,21 @@
     "        return np.prod(repeat - slice) / np.prod(repeat_k - slice)\n",
     "    return l\n",
     "\n",
+    "# 拉格朗日多项式 P_n(x)\n",
     "def P(f, x_list: np.ndarray, x: float):\n",
     "    return np.sum([f(x_list[k]) * L(k, x_list)(x) for k in range(len(x_list))])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 问题一"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -499,6 +501,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 问题四"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "问题 4：考虑拉格朗日插值问题，内插比外推更可靠吗？\n",
+      "考虑函数 f(x) = sqrt(x)\n",
+      "(1) 考虑以 x_0 = 1, x_1 = 4, x_2 = 9 为节点的拉格朗日插值多项式 P_2(x)\n",
+      "          函数值     f(x)        差值\n",
+      "5      2.2667   2.2361   -0.0306\n",
+      "50   -20.2333   7.0711   27.3044\n",
+      "115 -171.9000  10.7238  182.6238\n",
+      "185 -492.7333  13.6015  506.3348\n",
+      "平均差值: 179.05810289821613\n",
+      "(2) 考虑以 x_0 = 25, x_1 = 36, x_2 = 49 为节点的拉格朗日插值多项式 P_2(x)\n",
+      "        函数值     f(x)      差值\n",
+      "5    2.8205   2.2361 -0.5844\n",
+      "50   7.0688   7.0711  0.0023\n",
+      "115  9.0385  10.7238  1.6853\n",
+      "185  5.6527  13.6015  7.9488\n",
+      "平均差值: 2.262998003111167\n",
+      "(3) 考虑以 x_0 = 81, x_1 = 100, x_2 = 121 为节点的拉格朗日插值多项式 P_2(x)\n",
+      "         函数值     f(x)      差值\n",
+      "5     4.0952   2.2361 -1.8592\n",
+      "50    7.1742   7.0711 -0.1031\n",
+      "115  10.7256  10.7238 -0.0018\n",
+      "185  13.3659  13.6015  0.2356\n",
+      "平均差值: -0.4321226656936905\n",
+      "(4) 考虑以 x_0 = 144, x_1 = 169, x_2 = 196 为节点的拉格朗日插值多项式 P_2(x)\n",
+      "         函数值     f(x)      差值\n",
+      "5     5.1411   2.2361 -2.9050\n",
+      "50    7.6026   7.0711 -0.5316\n",
+      "115  10.7508  10.7238 -0.0270\n",
+      "185  13.6026  13.6015 -0.0012\n",
+      "平均差值: -0.8661706060574215\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x_0,x_1,x_2</th>\n",
+       "      <th>平均差值</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1,4,9</td>\n",
+       "      <td>179.0581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25,36,49</td>\n",
+       "      <td>2.2630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>81,100,121</td>\n",
+       "      <td>-0.4321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>144,169,196</td>\n",
+       "      <td>-0.8662</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x_0,x_1,x_2      平均差值\n",
+       "0        1,4,9  179.0581\n",
+       "1     25,36,49    2.2630\n",
+       "2   81,100,121   -0.4321\n",
+       "3  144,169,196   -0.8662"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def problem4():\n",
+    "    print(\"问题 4：考虑拉格朗日插值问题，内插比外推更可靠吗？\")\n",
+    "\n",
+    "    def f(x: float):\n",
+    "        return np.sqrt(x)\n",
+    "\n",
+    "    target_x = [5, 50, 115, 185]\n",
+    "\n",
+    "    print(\"考虑函数 f(x) = sqrt(x)\")\n",
+    "\n",
+    "    def do_by_node(index: int, nodes: list):\n",
+    "        print(f\"({index}) 考虑以\", \", \".join(\n",
+    "            [f\"x_{i} = {nodes[i]}\" for i in range(3)]), \"为节点的拉格朗日插值多项式 P_2(x)\")\n",
+    "        print(DataFrame({\n",
+    "            \"函数值\": {x: P(f, nodes, x) for x in target_x},\n",
+    "            \"f(x)\": {x: f(x) for x in target_x},\n",
+    "            \"差值\": {x: f(x) - P(f, nodes, x) for x in target_x}\n",
+    "        }).round(4))\n",
+    "        mean = np.mean([f(x) - P(f, nodes, x) for x in target_x])\n",
+    "        print(\"平均差值:\", mean)\n",
+    "        return mean\n",
+    "\n",
+    "    nodes_data = [\n",
+    "        [(i + 1) ** 2 for i in range(3)],\n",
+    "        [(i + 5) ** 2 for i in range(3)],\n",
+    "        [(i + 9) ** 2 for i in range(3)],\n",
+    "        [(i + 12) ** 2 for i in range(3)]\n",
+    "    ]\n",
+    "    means = [do_by_node(i + 1, nodes=nodes_data[i])\n",
+    "             for i in range(len(nodes_data))]\n",
+    "    return DataFrame({\n",
+    "        \"x_0,x_1,x_2\": [\",\".join([str(n) for n in nodes_data[i]]) for i in range(len(nodes_data))],\n",
+    "        \"平均差值\": [means[i] for i in range(len(nodes_data))]\n",
+    "    }).round(4)\n",
+    "\n",
+    "\n",
+    "problem4()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 实验结果\n",
     "\n",
     "> 准确规范地给出各个实验题目的结果，并对相应的思考题给出正确合理的回答与说明。"
@@ -526,6 +679,51 @@
     "2. 对 $f(x) = e^x$ 函数而言，$[-5, 5]$ 差值区间效果要比 $[-1, 1]$ 好。\n",
     "\n",
     "所以不是差值区间越小越好，需要结合具体函数考虑。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由题目（4）代码、数据和图像，对函数 $f(x) = \\sqrt{x}$，内插确实比外推可靠。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**思考题**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*对问题一存在的问题，应该如何解决？*\n",
+    "\n",
+    "问题一中，$f(x)=\\frac{1}{1+x^2}$ 在 $[-5,5]$ 的差值区间、$n\\in\\{10, 20\\}$ 的情况下拟合效果并不好，$n = 10, n = 20$ 的时候多项式在 $x$ 较大的时候明显偏大。\n",
+    "\n",
+    "由实验数据可知不应选择过大的插值多项式次数，$n$ 应该 $<10$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*对问题二中存在的问题的回答，试加以说明。*\n",
+    "\n",
+    "插值区间不是越小越好，如这两个函数：$f(x) = \\frac{1}{1+x^2}$ 和 $f(x) = e^x$，前者在 $[-1,1]$ 上插值效果较好而在 $[-5,5]$ 上效果不好；后者在 $[-1,1]$ 上效果不好而在 $[-5,5]$ 上效果较好。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*如何理解插值问题中的内插和外推？*\n",
+    "\n",
+    "内插即只对已知数据集内部范围的点的插值运算，外推即对已知数据集外部范围的点进行插值运算。\n",
+    "\n",
+    "内插运算比外推更可靠，偏差更小的原因是内插能够更加有效地利用已知数据集的限制条件，尽量利用已知的信息进行计算推测，故更加可靠。"
    ]
   }
  ],
