change filename format

--- a/notebooks/templates/lab-wrapper.ipynb
+++ b/notebooks/templates/lab-wrapper.ipynb
@@ -1,13 +1,5 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# 计算方法实验"
-      ]
-    }
-  ],
+  "cells": [],
   "metadata": {
     "interpreter": {
       "hash": "f470330dd75b17727875a8813842ebb7b3366eaa70abf674e7c084b82bd9caca"
