--- a/notebooks/实验一.ipynb
+++ b/notebooks/实验一.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 实验题目 1：拉格朗日（Lagrange）插值"
+    "# 实验题目 1：拉格朗日（Lagrange）插值"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 问题分析\n",
+    "## 问题分析\n",
     "\n",
     "> 准确描述并总结出实验题目（摘要），并准确分析原题的目的和意义。"
    ]
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 方法概要\n",
+    "### 方法概要\n",
     "\n",
     "给定平面上$n+1$个不同的数据点$(x_k, f(x_k)), k=0,1,\\cdots,n, x_i \\neq x_j, i \\neq j$则满足条件\n",
     "\n",
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 实验目的\n",
+    "### 实验目的\n",
     "\n",
     "利用拉格朗日插值多项式 $P_n(x)$ 求 $f(x)$ 的近似值。\n",
     "\n",
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 数学原理\n",
+    "## 数学原理\n",
     "\n",
     "> 数学原理表达清晰且书写准确。"
    ]
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 证明 $P_n(x)$ 存在且唯一"
+    "### 证明 $P_n(x)$ 存在且唯一"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 计算方法"
+    "### 计算方法"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 程序设计流程\n",
+    "## 程序设计流程\n",
     "\n",
     "> 编译通过，根据输入能得到正确输出。"
    ]
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 问题一"
+    "### 问题一"
    ]
   },
   {
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 问题二"
+    "### 问题二"
    ]
   },
   {
@@ -501,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 问题四"
+    "### 问题四"
    ]
   },
   {
@@ -652,7 +652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 实验结果\n",
+    "## 实验结果\n",
     "\n",
     "> 准确规范地给出各个实验题目的结果，并对相应的思考题给出正确合理的回答与说明。"
    ]
