--- a/notebooks/templates/lab-wrapper.ipynb
+++ b/notebooks/templates/lab-wrapper.ipynb
@@ -1,5 +1,13 @@
 {
-  "cells": [],
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "*数据显示结果已保留4位小数。*"
+      ]
+    }
+  ],
   "metadata": {
     "interpreter": {
       "hash": "f470330dd75b17727875a8813842ebb7b3366eaa70abf674e7c084b82bd9caca"
