--- a/notebooks/实验一.ipynb
+++ b/notebooks/实验一.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -521,28 +521,28 @@
       "50   -20.2333   7.0711   27.3044\n",
       "115 -171.9000  10.7238  182.6238\n",
       "185 -492.7333  13.6015  506.3348\n",
-      "平均差值: 179.05810289821613\n",
+      "平均差值: 179.0581\n",
       "(2) 考虑以 x_0 = 25, x_1 = 36, x_2 = 49 为节点的拉格朗日插值多项式 P_2(x)\n",
       "        函数值     f(x)      差值\n",
       "5    2.8205   2.2361 -0.5844\n",
       "50   7.0688   7.0711  0.0023\n",
       "115  9.0385  10.7238  1.6853\n",
       "185  5.6527  13.6015  7.9488\n",
-      "平均差值: 2.262998003111167\n",
+      "平均差值: 2.2630\n",
       "(3) 考虑以 x_0 = 81, x_1 = 100, x_2 = 121 为节点的拉格朗日插值多项式 P_2(x)\n",
       "         函数值     f(x)      差值\n",
       "5     4.0952   2.2361 -1.8592\n",
       "50    7.1742   7.0711 -0.1031\n",
       "115  10.7256  10.7238 -0.0018\n",
       "185  13.3659  13.6015  0.2356\n",
-      "平均差值: -0.4321226656936905\n",
+      "平均差值: -0.4321\n",
       "(4) 考虑以 x_0 = 144, x_1 = 169, x_2 = 196 为节点的拉格朗日插值多项式 P_2(x)\n",
       "         函数值     f(x)      差值\n",
       "5     5.1411   2.2361 -2.9050\n",
       "50    7.6026   7.0711 -0.5316\n",
       "115  10.7508  10.7238 -0.0270\n",
       "185  13.6026  13.6015 -0.0012\n",
-      "平均差值: -0.8661706060574215\n"
+      "平均差值: -0.8662\n"
      ]
     },
     {
@@ -603,7 +603,7 @@
        "3  144,169,196   -0.8662"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
     "            \"差值\": {x: f(x) - P(f, nodes, x) for x in target_x}\n",
     "        }).round(4))\n",
     "        mean = np.mean([f(x) - P(f, nodes, x) for x in target_x])\n",
-    "        print(\"平均差值:\", mean)\n",
+    "        print(f\"平均差值: {mean:.4f}\")\n",
     "        return mean\n",
     "\n",
     "    nodes_data = [\n",
