lab04 docs; fix: external images

--- a/notebooks/实验四.ipynb
+++ b/notebooks/实验四.ipynb
@@ -35,11 +35,9 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\begin{align*}\n",
-    "x_0 &= \\alpha \\\\\n",
-    "x_{n+1} &= x_n - \\frac{f(x_n)}{f'(x_n)} \\\\\n",
-    "&& n = 0,1,\\cdots\\\\\n",
-    "\\end{align*}\n",
+    "x_0 = \\alpha \\\\\n",
+    "x_{n+1} = x_n - \\frac{f(x_n)}{f'(x_n)} \\\\\n",
+    "n = 0,1,\\cdots\\\\\n",
     "$$"
    ]
   },
