fix: title level

--- a/notebooks/实验四.ipynb
+++ b/notebooks/实验四.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 实验题目 4：牛顿迭代法"
+    "# 实验题目 4：牛顿迭代法"
    ]
   },
   {
@@ -35,9 +35,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "x_0 = \\alpha \\\\\n",
-    "x_{n+1} = x_n - \\frac{f(x_n)}{f'(x_n)} \\\\\n",
-    "n = 0,1,\\cdots\\\\\n",
+    "x_0 = \\alpha , \\ x_{n+1} = x_n - \\frac{f(x_n)}{f'(x_n)}, \\ n = 0,1,\\cdots\n",
     "$$"
    ]
   },
