--- a/notebooks/templates/template.ipynb
+++ b/notebooks/templates/template.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 实验题目 1"
+    "# 实验题目 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 问题分析\n",
+    "## 问题分析\n",
     "\n",
     "> 准确描述并总结出实验题目（摘要），并准确分析原题的目的和意义。"
    ]
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 数学原理\n",
+    "## 数学原理\n",
     "\n",
     "> 数学原理表达清晰且书写准确。"
    ]
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 程序设计流程\n",
+    "## 程序设计流程\n",
     "\n",
     "> 编译通过，根据输入能得到正确输出。"
    ]
@@ -38,15 +38,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 实验结果\n",
+    "## 实验结果\n",
     "\n",
     "> 准确规范地给出各个实验题目的结果，并对相应的思考题给出正确合理的回答与说明。"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "02580f3b40faffdca494a56716cab34cc74dfb88737f96a81a04d7c61a2f2be5"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 ('base')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
