--- a/notebooks/实验2.ipynb
+++ b/notebooks/实验2.ipynb
@@ -22,37 +22,7 @@
    "source": [
     "### 方法概要\n",
     "\n",
-    "利用复化梯形求积公式、复化辛普生求积公式、复化柯特斯求积公式的误差估计式计算积分 $\\int^b_a f(x)dx$，记 $h = \\frac{b-a}{n}, x_k = a + k \\times h, k = 0, 1, \\cdots, n$，其计算公式："
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\begin{align*}\n",
-    "T_n &= \\frac{1}{2} h \\sum^n_{k=1}[f(x_{k-1}+f(x_k))] \\\\\n",
-    "T_{2n} &= \\frac{1}{2} T_n + \\frac{1}{2} h \\sum^n_{k=1}f(x_k - \\frac{1}{2}h) \\\\\n",
-    "S_n &= \\frac{1}{3}(4T_{2n}-T_n) \\\\\n",
-    "C_n &= \\frac{1}{15}(16S_{2n}-S_n) \\\\\n",
-    "R_n &= \\frac{1}{63}(64C_{2n}-C_n) \\\\\n",
-    "\\end{align*}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "或：\n",
-    "\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "T_0(h) &= T(h) \\\\\n",
-    "T_m(h) &= \\frac{T_{m-1}(\\frac{h}{2}) - (\\frac{1}{2})^{2m}T_{m-1}(h)}{1 - (\\frac{1}{2})^{2m}} \\\\\n",
-    "&= \\frac{4^mT_{m-1}(\\frac{h}{2})-T_{m-1}(h)}{4^m-1} \\\\\n",
-    "\\end{align*}\n",
-    "$$"
+    "利用复化梯形求积公式、复化辛普生求积公式、复化柯特斯求积公式的误差估计式计算积分 $\\int^b_a f(x)dx$。"
    ]
   },
   {
@@ -81,13 +51,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "利用复化梯形求积公式、复化辛普生求积公式、复化柯特斯求积公式的误差估计式可求得龙贝格积分法的公式："
+    "利用复化梯形求积公式、复化辛普生求积公式、复化柯特斯求积公式的误差估计式计算积分 $\\int^b_a f(x)dx$，记 $h = \\frac{b-a}{n}, x_k = a + k \\times h, k = 0, 1, \\cdots, n$，其计算公式："
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\n",
+    "\\begin{align*}\n",
+    "T_n &= \\frac{1}{2} h \\sum^n_{k=1}[f(x_{k-1}+f(x_k))] \\\\\n",
+    "T_{2n} &= \\frac{1}{2} T_n + \\frac{1}{2} h \\sum^n_{k=1}f(x_k - \\frac{1}{2}h) \\\\\n",
+    "S_n &= \\frac{1}{3}(4T_{2n}-T_n) \\\\\n",
+    "C_n &= \\frac{1}{15}(16S_{2n}-S_n) \\\\\n",
+    "R_n &= \\frac{1}{63}(64C_{2n}-C_n) \\\\\n",
+    "\\end{align*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "或者：\n",
     "$$\n",
     "\\begin{align*}\n",
     "T_0(h) &= T(h) \\\\\n",
