--- a/notebooks/实验2.ipynb
+++ b/notebooks/实验2.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "0.7182818284623739"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "10.950170314683838"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "3.141592653638244"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,6 +288,40 @@
    "source": [
     "# 第 (3) 问\n",
     "run(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          0         1         2         3         4\n",
+      "0  0.750000  0.708333  0.697024  0.694122  0.693391\n",
+      "1  0.694444  0.693254  0.693155  0.693148  0.000000\n",
+      "2  0.693175  0.693148  0.693147  0.000000  0.000000\n",
+      "3  0.693147  0.693147  0.000000  0.000000  0.000000\n",
+      "4  0.693147  0.000000  0.000000  0.000000  0.000000\n",
+      "result = 0.6931471819167452\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6931471819167452"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 第 (4) 问\n",
+    "run(3)"
    ]
   },
   {
@@ -301,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +386,7 @@
        "(3)   3.141593"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
