--- a/notebooks/实验3.ipynb
+++ b/notebooks/实验3.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -234,201 +234,245 @@
        "      <td>5</td>\n",
        "      <td>问题 1 (1)</td>\n",
        "      <td>2.465190e-32</td>\n",
-       "      <td>[0, 0.2, 0.4, 0.6000000000000001, 0.8, 1.0]</td>\n",
-       "      <td>[-1, -1.2, -1.4, -1.5999999999999999, -1.79999...</td>\n",
+       "      <td>[0, 0.2, 0.4, 0.6, 0.8, 1]</td>\n",
+       "      <td>[-1, -1.2, -1.4, -1.6, -1.8, -2]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10</td>\n",
        "      <td>问题 1 (1)</td>\n",
        "      <td>3.182337e-31</td>\n",
-       "      <td>[0, 0.1, 0.2, 0.30000000000000004, 0.4, 0.5, 0...</td>\n",
-       "      <td>[-1, -1.1, -1.2000000000000002, -1.30000000000...</td>\n",
+       "      <td>[0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....</td>\n",
+       "      <td>[-1, -1.1, -1.2, -1.3, -1.4, -1.5, -1.6, -1.7,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>20</td>\n",
        "      <td>问题 1 (1)</td>\n",
        "      <td>2.206932e-31</td>\n",
-       "      <td>[0, 0.05, 0.1, 0.15000000000000002, 0.2, 0.25,...</td>\n",
-       "      <td>[-1, -1.05, -1.1, -1.1500000000000001, -1.2000...</td>\n",
+       "      <td>[0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...</td>\n",
+       "      <td>[-1, -1.05, -1.1, -1.15, -1.2, -1.25, -1.3, -1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>5</td>\n",
        "      <td>问题 1 (2)</td>\n",
        "      <td>2.569560e-11</td>\n",
-       "      <td>[0, 0.2, 0.4, 0.6000000000000001, 0.8, 1.0]</td>\n",
-       "      <td>[1, 0.8333390356230387, 0.7142921304635431, 0....</td>\n",
+       "      <td>[0, 0.2, 0.4, 0.6, 0.8, 1]</td>\n",
+       "      <td>[1, 0.8333, 0.7143, 0.625, 0.5556, 0.5]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>10</td>\n",
        "      <td>问题 1 (2)</td>\n",
        "      <td>1.282857e-13</td>\n",
-       "      <td>[0, 0.1, 0.2, 0.30000000000000004, 0.4, 0.5, 0...</td>\n",
-       "      <td>[1, 0.9090911863322196, 0.8333337288430721, 0....</td>\n",
+       "      <td>[0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....</td>\n",
+       "      <td>[1, 0.9091, 0.8333, 0.7692, 0.7143, 0.6667, 0....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>20</td>\n",
        "      <td>问题 1 (2)</td>\n",
        "      <td>5.366889e-16</td>\n",
-       "      <td>[0, 0.05, 0.1, 0.15000000000000002, 0.2, 0.25,...</td>\n",
-       "      <td>[1, 0.9523809630269818, 0.9090909268125394, 0....</td>\n",
+       "      <td>[0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...</td>\n",
+       "      <td>[1, 0.9524, 0.9091, 0.8696, 0.8333, 0.8, 0.769...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>5</td>\n",
        "      <td>问题 2 (1)</td>\n",
        "      <td>2.023870e+03</td>\n",
-       "      <td>[1, 1.4, 1.7999999999999998, 2.199999999999999...</td>\n",
-       "      <td>[0, 2.6076891538492872, 8.124196625549118, 17....</td>\n",
+       "      <td>[1, 1.4, 1.8, 2.2, 2.6, 3]</td>\n",
+       "      <td>[0, 2.608, 8.124, 17.66, 32.55, 54.5]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>10</td>\n",
        "      <td>问题 2 (1)</td>\n",
        "      <td>1.541237e+03</td>\n",
-       "      <td>[1, 1.2, 1.4, 1.5999999999999999, 1.7999999999...</td>\n",
-       "      <td>[0, 1.0055508321940254, 2.613659182614748, 4.9...</td>\n",
+       "      <td>[1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3]</td>\n",
+       "      <td>[0, 1.006, 2.614, 4.947, 8.138, 12.33, 17.68, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>20</td>\n",
        "      <td>问题 2 (1)</td>\n",
        "      <td>1.315425e+03</td>\n",
-       "      <td>[1, 1.1, 1.2000000000000002, 1.300000000000000...</td>\n",
-       "      <td>[0, 0.434963271851454, 1.0058077554774965, 1.7...</td>\n",
+       "      <td>[1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1....</td>\n",
+       "      <td>[0, 0.435, 1.006, 1.727, 2.614, 3.682, 4.948, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>5</td>\n",
        "      <td>问题 2 (2)</td>\n",
        "      <td>7.459298e-07</td>\n",
-       "      <td>[1, 1.4, 1.7999999999999998, 2.199999999999999...</td>\n",
-       "      <td>[-2, -1.5539889980952382, -1.3836172899114931,...</td>\n",
+       "      <td>[1, 1.4, 1.8, 2.2, 2.6, 3]</td>\n",
+       "      <td>[-2, -1.554, -1.384, -1.293, -1.238, -1.2]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>10</td>\n",
        "      <td>问题 2 (2)</td>\n",
        "      <td>4.401675e-10</td>\n",
-       "      <td>[1, 1.2, 1.4, 1.5999999999999999, 1.7999999999...</td>\n",
-       "      <td>[-2, -1.7142451804511538, -1.5555228848496192,...</td>\n",
+       "      <td>[1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3]</td>\n",
+       "      <td>[-2, -1.714, -1.556, -1.455, -1.385, -1.333, -...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>20</td>\n",
        "      <td>问题 2 (2)</td>\n",
        "      <td>8.946298e-14</td>\n",
-       "      <td>[1, 1.1, 1.2000000000000002, 1.300000000000000...</td>\n",
-       "      <td>[-2, -1.8333328294259301, -1.7142851698413297,...</td>\n",
+       "      <td>[1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1....</td>\n",
+       "      <td>[-2, -1.833, -1.714, -1.625, -1.556, -1.5, -1....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>5</td>\n",
        "      <td>问题 3 (1)</td>\n",
        "      <td>3.263086e+05</td>\n",
-       "      <td>[0, 0.2, 0.4, 0.6000000000000001, 0.8, 1.0]</td>\n",
-       "      <td>[0.3333333333333333, 2.5066666666666677, 11.69...</td>\n",
+       "      <td>[0, 0.2, 0.4, 0.6, 0.8, 1]</td>\n",
+       "      <td>[0.3333, 2.507, 11.69, 55.95, 275.5, 1372]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>10</td>\n",
        "      <td>问题 3 (1)</td>\n",
        "      <td>4.889478e-01</td>\n",
-       "      <td>[0, 0.1, 0.2, 0.30000000000000004, 0.4, 0.5, 0...</td>\n",
-       "      <td>[0.3333333333333333, 0.2511111111111111, 0.363...</td>\n",
+       "      <td>[0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....</td>\n",
+       "      <td>[0.3333, 0.2511, 0.3637, 0.5412, 0.7404, 0.946...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>20</td>\n",
        "      <td>问题 3 (1)</td>\n",
        "      <td>4.815643e-01</td>\n",
-       "      <td>[0, 0.05, 0.1, 0.15000000000000002, 0.2, 0.25,...</td>\n",
-       "      <td>[0.3333333333333333, 0.16437499999999997, 0.16...</td>\n",
+       "      <td>[0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...</td>\n",
+       "      <td>[0.3333, 0.1644, 0.1666, 0.2331, 0.3237, 0.423...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>5</td>\n",
        "      <td>问题 3 (2)</td>\n",
        "      <td>1.697642e+06</td>\n",
-       "      <td>[0, 0.2, 0.4, 0.6000000000000001, 0.8, 1.0]</td>\n",
-       "      <td>[-1, -4.802661893779973, -24.623829295619263, ...</td>\n",
+       "      <td>[0, 0.2, 0.4, 0.6, 0.8, 1]</td>\n",
+       "      <td>[-1, -4.803, -24.62, -124.5, -624.7, -3126]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>10</td>\n",
        "      <td>问题 3 (2)</td>\n",
        "      <td>3.852943e-01</td>\n",
-       "      <td>[0, 0.1, 0.2, 0.30000000000000004, 0.4, 0.5, 0...</td>\n",
-       "      <td>[-1, -0.2335276701694724, 0.0874382457825747, ...</td>\n",
+       "      <td>[0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....</td>\n",
+       "      <td>[-1, -0.2335, 0.08744, 0.2583, 0.3767, 0.4748,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>20</td>\n",
        "      <td>问题 3 (2)</td>\n",
        "      <td>2.209629e-01</td>\n",
-       "      <td>[0, 0.05, 0.1, 0.15000000000000002, 0.2, 0.25,...</td>\n",
-       "      <td>[-1, -0.32502148139805487, -0.0407937778694009...</td>\n",
+       "      <td>[0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...</td>\n",
+       "      <td>[-1, -0.325, -0.04079, 0.0967, 0.1789, 0.24, 0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>5</td>\n",
        "      <td>问题 3 (3)</td>\n",
        "      <td>3.617925e+02</td>\n",
-       "      <td>[0, 0.2, 0.4, 0.6000000000000001, 0.8, 1.0]</td>\n",
-       "      <td>[0, 0.2986462127501341, 0.927219870027348, 2.8...</td>\n",
+       "      <td>[0, 0.2, 0.4, 0.6, 0.8, 1]</td>\n",
+       "      <td>[0, 0.2986, 0.9272, 2.835, 10.71, 47.94]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>10</td>\n",
        "      <td>问题 3 (3)</td>\n",
        "      <td>9.913683e-06</td>\n",
-       "      <td>[0, 0.1, 0.2, 0.30000000000000004, 0.4, 0.5, 0...</td>\n",
-       "      <td>[0, 0.11205510913037421, 0.2451165144244346, 0...</td>\n",
+       "      <td>[0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....</td>\n",
+       "      <td>[0, 0.1121, 0.2451, 0.4018, 0.5841, 0.7938, 1....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>20</td>\n",
        "      <td>问题 3 (3)</td>\n",
        "      <td>1.212561e-08</td>\n",
-       "      <td>[0, 0.05, 0.1, 0.15000000000000002, 0.2, 0.25,...</td>\n",
-       "      <td>[0, 0.05259503995574239, 0.11040898628183947, ...</td>\n",
+       "      <td>[0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...</td>\n",
+       "      <td>[0, 0.0526, 0.1104, 0.1737, 0.2427, 0.3178, 0....</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     N  ...                                                  y\n",
-       "0    5  ...  [-1, -1.2, -1.4, -1.5999999999999999, -1.79999...\n",
-       "1   10  ...  [-1, -1.1, -1.2000000000000002, -1.30000000000...\n",
-       "2   20  ...  [-1, -1.05, -1.1, -1.1500000000000001, -1.2000...\n",
-       "3    5  ...  [1, 0.8333390356230387, 0.7142921304635431, 0....\n",
-       "4   10  ...  [1, 0.9090911863322196, 0.8333337288430721, 0....\n",
-       "5   20  ...  [1, 0.9523809630269818, 0.9090909268125394, 0....\n",
-       "6    5  ...  [0, 2.6076891538492872, 8.124196625549118, 17....\n",
-       "7   10  ...  [0, 1.0055508321940254, 2.613659182614748, 4.9...\n",
-       "8   20  ...  [0, 0.434963271851454, 1.0058077554774965, 1.7...\n",
-       "9    5  ...  [-2, -1.5539889980952382, -1.3836172899114931,...\n",
-       "10  10  ...  [-2, -1.7142451804511538, -1.5555228848496192,...\n",
-       "11  20  ...  [-2, -1.8333328294259301, -1.7142851698413297,...\n",
-       "12   5  ...  [0.3333333333333333, 2.5066666666666677, 11.69...\n",
-       "13  10  ...  [0.3333333333333333, 0.2511111111111111, 0.363...\n",
-       "14  20  ...  [0.3333333333333333, 0.16437499999999997, 0.16...\n",
-       "15   5  ...  [-1, -4.802661893779973, -24.623829295619263, ...\n",
-       "16  10  ...  [-1, -0.2335276701694724, 0.0874382457825747, ...\n",
-       "17  20  ...  [-1, -0.32502148139805487, -0.0407937778694009...\n",
-       "18   5  ...  [0, 0.2986462127501341, 0.927219870027348, 2.8...\n",
-       "19  10  ...  [0, 0.11205510913037421, 0.2451165144244346, 0...\n",
-       "20  20  ...  [0, 0.05259503995574239, 0.11040898628183947, ...\n",
+       "     N        标号          均方误差  \\\n",
+       "0    5  问题 1 (1)  2.465190e-32   \n",
+       "1   10  问题 1 (1)  3.182337e-31   \n",
+       "2   20  问题 1 (1)  2.206932e-31   \n",
+       "3    5  问题 1 (2)  2.569560e-11   \n",
+       "4   10  问题 1 (2)  1.282857e-13   \n",
+       "5   20  问题 1 (2)  5.366889e-16   \n",
+       "6    5  问题 2 (1)  2.023870e+03   \n",
+       "7   10  问题 2 (1)  1.541237e+03   \n",
+       "8   20  问题 2 (1)  1.315425e+03   \n",
+       "9    5  问题 2 (2)  7.459298e-07   \n",
+       "10  10  问题 2 (2)  4.401675e-10   \n",
+       "11  20  问题 2 (2)  8.946298e-14   \n",
+       "12   5  问题 3 (1)  3.263086e+05   \n",
+       "13  10  问题 3 (1)  4.889478e-01   \n",
+       "14  20  问题 3 (1)  4.815643e-01   \n",
+       "15   5  问题 3 (2)  1.697642e+06   \n",
+       "16  10  问题 3 (2)  3.852943e-01   \n",
+       "17  20  问题 3 (2)  2.209629e-01   \n",
+       "18   5  问题 3 (3)  3.617925e+02   \n",
+       "19  10  问题 3 (3)  9.913683e-06   \n",
+       "20  20  问题 3 (3)  1.212561e-08   \n",
        "\n",
-       "[21 rows x 5 columns]"
+       "                                                    x  \\\n",
+       "0                          [0, 0.2, 0.4, 0.6, 0.8, 1]   \n",
+       "1   [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....   \n",
+       "2   [0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...   \n",
+       "3                          [0, 0.2, 0.4, 0.6, 0.8, 1]   \n",
+       "4   [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....   \n",
+       "5   [0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...   \n",
+       "6                          [1, 1.4, 1.8, 2.2, 2.6, 3]   \n",
+       "7   [1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3]   \n",
+       "8   [1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1....   \n",
+       "9                          [1, 1.4, 1.8, 2.2, 2.6, 3]   \n",
+       "10  [1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3]   \n",
+       "11  [1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1....   \n",
+       "12                         [0, 0.2, 0.4, 0.6, 0.8, 1]   \n",
+       "13  [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....   \n",
+       "14  [0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...   \n",
+       "15                         [0, 0.2, 0.4, 0.6, 0.8, 1]   \n",
+       "16  [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....   \n",
+       "17  [0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...   \n",
+       "18                         [0, 0.2, 0.4, 0.6, 0.8, 1]   \n",
+       "19  [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0....   \n",
+       "20  [0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4...   \n",
+       "\n",
+       "                                                    y  \n",
+       "0                    [-1, -1.2, -1.4, -1.6, -1.8, -2]  \n",
+       "1   [-1, -1.1, -1.2, -1.3, -1.4, -1.5, -1.6, -1.7,...  \n",
+       "2   [-1, -1.05, -1.1, -1.15, -1.2, -1.25, -1.3, -1...  \n",
+       "3             [1, 0.8333, 0.7143, 0.625, 0.5556, 0.5]  \n",
+       "4   [1, 0.9091, 0.8333, 0.7692, 0.7143, 0.6667, 0....  \n",
+       "5   [1, 0.9524, 0.9091, 0.8696, 0.8333, 0.8, 0.769...  \n",
+       "6               [0, 2.608, 8.124, 17.66, 32.55, 54.5]  \n",
+       "7   [0, 1.006, 2.614, 4.947, 8.138, 12.33, 17.68, ...  \n",
+       "8   [0, 0.435, 1.006, 1.727, 2.614, 3.682, 4.948, ...  \n",
+       "9          [-2, -1.554, -1.384, -1.293, -1.238, -1.2]  \n",
+       "10  [-2, -1.714, -1.556, -1.455, -1.385, -1.333, -...  \n",
+       "11  [-2, -1.833, -1.714, -1.625, -1.556, -1.5, -1....  \n",
+       "12         [0.3333, 2.507, 11.69, 55.95, 275.5, 1372]  \n",
+       "13  [0.3333, 0.2511, 0.3637, 0.5412, 0.7404, 0.946...  \n",
+       "14  [0.3333, 0.1644, 0.1666, 0.2331, 0.3237, 0.423...  \n",
+       "15        [-1, -4.803, -24.62, -124.5, -624.7, -3126]  \n",
+       "16  [-1, -0.2335, 0.08744, 0.2583, 0.3767, 0.4748,...  \n",
+       "17  [-1, -0.325, -0.04079, 0.0967, 0.1789, 0.24, 0...  \n",
+       "18           [0, 0.2986, 0.9272, 2.835, 10.71, 47.94]  \n",
+       "19  [0, 0.1121, 0.2451, 0.4018, 0.5841, 0.7938, 1....  \n",
+       "20  [0, 0.0526, 0.1104, 0.1737, 0.2427, 0.3178, 0....  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,6 +484,14 @@
     "    all = []\n",
     "    for d in all_data:\n",
     "        all.extend(d)\n",
+    "    # 重新格式化为字符串\n",
+    "    all = [{\n",
+    "            'N': d['N'],\n",
+    "            '标号': d['标号'],\n",
+    "            '均方误差': d['均方误差'],\n",
+    "            'x': [f\"{x:.4g}\" for x in d['x']],\n",
+    "            'y': [f\"{x:.4g}\" for x in d['y']],\n",
+    "        } for d in all]\n",
     "    return DataFrame(all)\n",
     "\n",
     "\n",
@@ -452,7 +504,7 @@
    "source": [
     "*为防止输出 PDF 时表格格式被破坏，在此放入上方表格的图片。*\n",
     "\n",
-    "![result_table](./imgs/lab03_result.png)"
+    "![result_table](./imgs/lab03_result_fixed.png)"
    ]
   },
   {
